styles.css
/* _-----------------------------------------boiler plate/ theme -------------------------------------- */

*{ 
    --_bgdark: #0e1421;
    --_bgdarktext: lightgray;
    --_bglight: #f5f5f5;
    box-sizing: border-box;

  
  }
html.dark {
    background-color: var(--_bgdark);
    color: var(--_bgdarktext);
  }
  .dark header.visible {
    box-shadow: 0 1px 0px 0 rgba(65, 65, 65, 0.24);
  }
  
  .dark .nav-links a {
    color: var(--_bgdarktext);
  }
  
  html {
    background-color: var(--_bglight);
    font-family: Arial, Helvetica, sans-serif;
  }
  
  body {
    margin: 0 auto;
    width: 100%;
    max-width: 1200px;
    padding: 1rem;
    line-height: 1.5;
  }
  a {
    text-decoration: none;
    color: inherit;
  }
  /* _-----------------------------------------header-------------------------------------- */
  .headerName {
    opacity: 0;
  }
  @keyframes handwriting {
    0% {
      width: 0;
    }
    100% {
      width: 50%;
    }
  }
  
  .headerName.visible {
    display: inline-block;
    overflow: hidden;
    opacity: 100;
    white-space: nowrap; 
    font-family: 'Courgette', cursive;
    animation: handwriting 2s steps(100, end) forwards;
  }
  header{
    position: sticky; 
    z-index: 10;
    top: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    overflow: hidden;
  }
  header.visible{
    box-shadow: 0 1px 0px 0 rgba(0,0,0,0.24);
    background-color: var(--_bglight);
    opacity: 90%;
  }
  .dark header{
      background-color: var(--_bgdark);
    }
  
  .nav {
    display: flex;
    justify-content: flex-end;
    gap: 2em;
    position: relative;
    transition: transform 0.3s ease-out; 
    transform: translateX(80%);
}
.nav.visible {
  transform: translateX(0);
}

.nav-links {
    width: 100%;
    top: 5rem;
    left: 48px;
    display: none;
    margin: 0;
    overflow: hidden;
}

 
.nav-links a {
    /* display: block; */
    text-align: right;
    padding: 10px 0;
    font-size: 1.2rem;
}

.nav-links a:hover,
.nav-links a:focus {
  color: var(--_bgdark);
  text-decoration: none;
  transform: scale(1.05);
}

.hamburger {
    padding-right: 20px;
    cursor: pointer;
}
  
.hamburger .line {
    display: block;
    width: 40px;
    height: 2px;
    margin-bottom: 10px;
    background-color: var(--_bgdark);
}
  .dark .line {
   background-color: var(--_bgdarktext);
}

.line {
  display: block;
  width: 20px;
  height: 2px;

  background-color: var(--_bgdark);
}

@media screen and (min-width: 636px) {
  
  
  .nav-links {
    display: block;
    width: auto;
    background: none;
  }
  
  .nav-links a {
    display: inline-block;
    padding: 15px 20px;
  }
  
  .hamburger {
    display: none;
  }
  
}
@media (max-width: 630px) {
  body {
    max-width: 100%;
  }
  .nav{
    transform: translateX(70%);
  }
  .headerName.visible {
    animation: handwriting 1s steps(100, end) forwards;
  }
}
#line2 {
  transform: rotate(45deg);
}
#line1 {
  transform: rotate(-45deg);
}
.close-menu {
  height: 15px;
  overflow: hidden;
  width: 50px;
  margin-left: auto;
  margin-bottom: 20px;
}
.side-menu{
  display: none;
}
@keyframes sideanimation {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(0%);
  }
}

.side-menu{
  position: fixed;
  z-index: 200;
  top: 0 ;
  right: 0;
  display:none;
  flex-direction: column;
  align-items: center;
  gap: 30px;
  width: 70vw;
  height: 50dvh;
  background-color: var(--_bglight);
  padding: 26px 5px;
  box-shadow: -5px 5px 10px 0px rgba(0, 0, 0, 0.5);
}
.dark .side-menu{
  background-color: var(--_bgdark);
}

.side-menu.expanded {
  display: flex;
  animation: sideanimation 0.2s steps(100, end) forwards;
}
/* _-----------------------------------------hero-------------------------------------- */

.hero {
  height: 80vh;
  display: flex;
  justify-content: start;
  align-items: center;
}
.intro >*{
  text-align: center;
}
.photo img {
  height: 45vw;
  max-height: 600px;
}
.dark .photo img{
  filter: brightness(0.60 );

}
.intro {
  margin: 0 auto;
}

.intro h1 {
  font-size: 2.5em;
}

.intro h2 {
  font-size: 2em;
  color: #686868;
}

.intro p {
  font-size: 1.2em;
}

.location {
  font-style: italic;
  color: #777;
}

.button-container {
  margin-top: 20px;
}

.cta-button {
  background-color: #007bff;
  font-size: 1em;
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 3px;
  cursor: pointer;
  margin-right: 10px;
}

.cta-button.secondary {
  background-color: #777;
}

@media only screen and (max-width: 768px) {
  .hero{
    flex-direction: column-reverse;
  }
  .photo img {
    height: 55vw;
  }
  .intro h1 {
    font-size: 2rem;
  }

  .intro h2 {
    font-size: 1.5rem;
  }

  .intro p {
    font-size: 1rem;
  }
}



/* _-----------------------------------------theme toggle-------------------------------------- */


#themeToggle {
    border: 0;
    background: none;

  }
  #themeToggle:hover {
    cursor: pointer;
    transform: scale(1.05);
  }

  .sun {
    fill: black;
  }
  .moon {
    fill: transparent;
  }

  .dark .sun {
    fill: transparent;
  }
  .dark .moon {
    fill: white;
  }

/* _-----------------------------------------techskills-------------------------------------- */
.h1{
  display: flex;
  font-size: 4.3rem;
  margin: 0;
  justify-content: center;
  padding: 50px;
}
.skills{
  display: flex;
  flex-wrap: wrap;
  max-width: 900px;
  gap: 50px; 
  justify-content: space-around;
  margin: 20px auto 0 auto;
}
.skill {
  display: flex;
  flex-direction: column;
  align-items: center;

}


.dark svg path {
  fill: var(--_bgdarktext); 
}

/* _-----------------------------------------projects-------------------------------------- */

